--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "client": "npm start --prefix client",
     "watch": "concurrently 'npm:server' 'npm:client'",
     "deploy": "npm run build --prefix client && npm start --prefix server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm test --prefix client && npm test --prefix server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "concurrently": "^7.0.0",
+    "jest": "^27.4.7",
+    "jtest": "^0.0.1",
     "morgan": "^1.10.0"
   }
 }
