--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
-    "start": "set PORT=5000&& node src/server.js"
+    "start": "set PORT=5000&& node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "Abhiram Challapalli",
@@ -18,7 +19,8 @@
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "nasa_project": "file:..",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pm2": "^5.1.2"
   },
   "devDependencies": {
     "jest": "^27.4.7",
