Mongoose client created

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "concurrently": "^7.0.0",
     "jtest": "^0.0.1",
+    "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
     "pm2": "^5.1.2"
   }
