--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jtest": "^0.0.1",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
-    "pm2": "^5.1.2"
+    "nodemon": "^2.0.15",
+    "pm2": "^5.1.2",
+    "react": "^17.0.2"
   }
 }
